--- a/index.html
+++ b/index.html
@@ -4,22 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="static/index.css">
+    <script src="static/index.js" defer></script>
     <title>Aloft</title>
 </head>
 <body>
     <div class="page">
+        <div class="add-project-prompt invisible">
+            <form action="/" method="post">
+                <label for="name">Project name: </label>
+                <input type="text" name="name" id="name" autocomplete="off" required>
+                <input type="submit" value="Add">
+            </form>
+        </div>
         <nav>
             <header class="nav__header">
-                <h1>Projects</h1>
-                <div class="add-project"></div>
+                <h1 class="nav__header__title"><span>Projects</span></h1>
+                <div class="nav__header__button"><img src="static/img/add-project-shadow-pink.svg" alt="add project"></div>
             </header>
             <div class="nav__main">
-                <ul class="nav__list">
-                    <li>project 1</li>
-                    <li>project 2</li>
-                    <li>project 3</li>
-                </ul>
+                <div class="nav__list">
+                    <div class="nav__list__item">project 1</div>
+                    <div class="nav__list__item">project 2</div>
+                    <div class="nav__list__item">project 3</div>
+                </div>
             </div>
         </nav>
         <main>
