--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="page">
         <div class="add-project-prompt invisible">
-            <form action="/" method="post">
+            <form action="/add-project" method="post">
                 <label for="name">Project name: </label>
                 <input type="text" name="name" id="name" autocomplete="off" required>
                 <input type="submit" value="Add">
