last commit before nuke

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="add-project-prompt invisible">
             <form action="/add-project" method="post">
                 <label for="name">Project name: </label>
-                <input type="text" name="name" id="name" autocomplete="off" required>
+                <input type="text" name="name" id="name" autocomplete="off" required autofocus>
                 <input type="submit" value="Add">
             </form>
         </div>
@@ -24,14 +24,63 @@
             </header>
             <div class="nav__main">
                 <div class="nav__list">
-                    <div class="nav__list__item">project 1</div>
-                    <div class="nav__list__item">project 2</div>
-                    <div class="nav__list__item">project 3</div>
                 </div>
             </div>
         </nav>
         <main>
-
+            <section class="main__header">
+                <h1 class="main__header__title">Project Title</h1>
+            </section>
+            <section class="main__body">
+                <ul class="main__body__list">
+                    <li class="main__body__list__item">point 1</li>
+                    <li class="main__body__list__item">HEEEHWHOWHOEHEHEEE</li>
+                    <li class="main__body__list__item">ll</li>
+                    <li class="main__body__list__item">point 1</li>
+                    <li class="main__body__list__item">HEEEHWHOWHOEHEHEEE</li>
+                    <li class="main__body__list__item">ll</li>
+                    <li class="main__body__list__item">point 1</li>
+                    <li class="main__body__list__item">HEEEHWHOWHOEHEHEEE</li>
+                    <li class="main__body__list__item">ll</li>
+                    <li class="main__body__list__item">point 1</li>
+                    <li class="main__body__list__item">HEEEHWHOWHOEHEHEEE</li>
+                    <li class="main__body__list__item">ll</li>
+                    <li class="main__body__list__item">point 1</li>
+                    <li class="main__body__list__item">HEEEHWHOWHOEHEHEEE</li>
+                    <li class="main__body__list__item">ll</li>
+                    <li class="main__body__list__item">point 1</li>
+                    <li class="main__body__list__item">HEEEHWHOWHOEHEHEEE</li>
+                    <li class="main__body__list__item">ll</li>
+                    <li class="main__body__list__item">point 1</li>
+                    <li class="main__body__list__item">HEEEHWHOWHOEHEHEEE</li>
+                    <li class="main__body__list__item">ll</li>
+                    <li class="main__body__list__item">point 1</li>
+                    <li class="main__body__list__item">HEEEHWHOWHOEHEHEEE</li>
+                    <li class="main__body__list__item">ll</li>
+                    <li class="main__body__list__item">point 1</li>
+                    <li class="main__body__list__item">HEEEHWHOWHOEHEHEEE</li>
+                    <li class="main__body__list__item">ll</li>
+                    <li class="main__body__list__item">point 1</li>
+                    <li class="main__body__list__item">HEEEHWHOWHOEHEHEEE</li>
+                    <li class="main__body__list__item">ll</li>
+                    <li class="main__body__list__item">point 1</li>
+                    <li class="main__body__list__item">HEEEHWHOWHOEHEHEEE</li>
+                    <li class="main__body__list__item">ll</li>
+                    <li class="main__body__list__item">point 1</li>
+                    <li class="main__body__list__item">HEEEHWHOWHOEHEHEEE</li>
+                    <li class="main__body__list__item">ll</li>
+                    <li class="main__body__list__item">point 1</li>
+                    <li class="main__body__list__item">HEEEHWHOWHOEHEHEEE</li>
+                    <li class="main__body__list__item">ll</li>
+                    <li class="main__body__list__item">point 1</li>
+                    <li class="main__body__list__item">HEEEHWHOWHOEHEHEEE</li>
+                    <li class="main__body__list__item">ll</li>
+                    <li class="main__body__list__item">point 1</li>
+                    <li class="main__body__list__item">HEEEHWHOWHOEHEHEEE</li>
+                    <li class="main__body__list__item">ll</li>
+                </ul>
+                <div class="main__body__input">hello some input</div>
+            </section>
         </main>
     </div>
 </body>
