implement selecting project

--- a/index.html
+++ b/index.html
@@ -32,31 +32,13 @@
         </nav>
         <main>
             <section class="main__header">
-                <h1 class="main__header__title">Project Title</h1>
+                <h1 class="main__header__title">Aloft</h1>
             </section>
             <section class="main__list">
-                <div class="main__list__item">hello</div>
-                <div class="main__list__item">reeeeeee</div>
-                <div class="main__list__item">bullshit</div>
-                <div class="main__list__item">dingus</div>
-                <div class="main__list__item">hehHEHEHEH</div>
-                <div class="main__list__item">hello</div>
-                <div class="main__list__item">reeeeeee</div>
-                <div class="main__list__item">bullshit</div>
-                <div class="main__list__item">dingus</div>
-                <div class="main__list__item">hehHEHEHEH</div>
-                <div class="main__list__item">hello</div>
-                <div class="main__list__item">reeeeeee</div>
-                <div class="main__list__item">bullshit</div>
-                <div class="main__list__item">dingus</div>
-                <div class="main__list__item">hehHEHEHEH</div>
-                <div class="main__list__item">hello</div>
-                <div class="main__list__item">reeeeeee</div>
-                <div class="main__list__item">bullshit</div>
-                <div class="main__list__item">dingus</div>
-                <div class="main__list__item">hehHEHEHEH</div>
+                <div class="main__list__item">Select or add a project from the menu in the top left</div>
             </section>
             <form action="/add-point" method="post" class="main__input">
+                <input type="hidden" name="active-project" value="" id="form-active-project">
                 <input type="text" name="new-point" id="new-point" placeholder="Add point" autocomplete="off" required>
             </form>
         </main>
