--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/index.css">
-    <script src="static/index.js" defer></script>
+    <script type="module" src="static/js.cookie.mjs" defer></script>
+    <script type="module" src="static/index.mjs" defer></script>
     <title>Aloft</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
             <span></span><span></span><span></span>
         </span>
         <div class="add-project-prompt invisible">
-            <form action="/add-project" method="post">
+            <form action="/add-project" method="post" id="add-project">
                 <label for="name">Project name: </label>
                 <input type="text" name="name" id="name" autocomplete="off" required autofocus>
                 <input type="submit" value="Add">
